# wordxtract

./: ProjectHome.md  README  aclocal.m4  configure  dict
branches/wordxtract-win/wordxtract/: ChangeLog  Makefile.am  Makefile.in  README  bootstrap  config.h.in  configure  configure.ac  configure.i586-mingw32msvc
branches/wordxtract-win/wordxtract/data/: Makefile.am
branches/wordxtract-win/wordxtract/po/: ChangeLog  ru.po
branches/wordxtract-win/wordxtract/src/: Makefile.am  Makefile.in  dict.c  dictwin.c  engparser.h  main.c  srt.c  word.h
branches/wordxtract-win/wordxtract/src/pixmaps/: Makefile.am
branches/wordxtract-win/wordxtract/src/win32/: Makefile.am
data/: Makefile.in
pixmaps/: Makefile.am
src/: Makefile.am  confwin.c  confwin.h  dictwin.c  dictwin.h  engparser.h  main.h
trunk/: README  configure.ac
trunk/data/: Makefile.am
trunk/po/: POTFILES.in
trunk/src/: dict.c  dictwin.c  plaintext.c
trunk/src/pixmaps/: Makefile.am
trunk/wordxtract/: ChangeLog  NEWS  README  configure  configure.ac
trunk/wordxtract-v0.1/: bootstrap
trunk/wordxtract-v0.1/pixmaps/: Makefile.in
trunk/wordxtract-v0.1/src/: dict.h  engparser.c  mainwin.h  srt.h  word.h
trunk/wordxtract-v0.1/src/pixmaps/: Makefile.in
trunk/wordxtract/po/: POTFILES.in  ru.po
trunk/wordxtract/src/: Makefile.in  confwin.c  dict.c  dictwin.c  engparser.c  main.c  main.h  mainwin.c  srt.c  word.c
trunk/wordxtract/src/pixmaps/: Makefile.in
trunk/wordxtract/src/win32/: Makefile.in  wordxtract.rc
wordxtract/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac
wordxtract-v0.1/: Makefile.am
wordxtract-v0.1/po/: ru.po
wordxtract-v0.1/src/: mainwin.c  plaintext.h
wordxtract/data/: Makefile.in  wordxtract.desktop.in
wordxtract/pixmaps/: Makefile.am  Makefile.in
wordxtract/po/: ru.po
wordxtract/src/: dict.h  dictwin.c  engparser.c  main.c  main.h  mainwin.c  plaintext.c  word.h
