#Makefile.am for WordExtract project
#Process this file with automake to produce Makefile.in

SUBDIRS = data pixmaps po src

INTLTOOL_FILES = 		\
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in
EXTRA_DIST = $(INTLTOOL_FILES)	\
	dict			\
	bootstrap
DISTCLEANFILES = 		\
	intltool-extract	\
	intltool-merge		\
	intltool-update
